# reward-board

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
reward_board/: __init__.py  app.py
reward_board/data/: board_state.json
reward_board/static/css/: style.css
reward_board/static/js/: script.js
reward_board/templates/: index.html
